# octetos-db

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  configure.ac  db.cbp  db.depend  db.layout
abstract/: AUTHORS  Makefile.am  clientdb.cc  clientdb.hh  configure.ac  octetos-db.pc.in
ing/: rqs.ods
mariadb/: Makefile.am  clientdb-maria.cc  clientdb-maria.hh  configure.ac  octetos-db-maria.pc.in
postgresql/: ChangeLog  Makefile.am  clientdb-postgresql.cc  clientdb-postgresql.hh  configure.ac  octetos-db-postgresql.pc.in
src/: Makefile.am  Makefile.in  clientdb-dbi.cc  clientdb-dbi.hh  clientdb-maria.cc  clientdb-mariadb.cc  clientdb-mysql.cc  clientdb-mysql.hh  clientdb-postgresql.cc  clientdb-postgresql.hh  clientdb-sqlite.cc  clientdb-sqlite.hh  clientdb.cc  clientdb.hh  config-win.h  inet_pton.cc  inet_pton.hh  main.cc  octetos-db-maria.pc.in  octetos-db-mariadb.pc.in  octetos-db-mysql.pc.in  octetos-db-postgresql.pc.in  octetos-db.pc.in  test-v0.cc
tests/: Makefile.am  Makefile.in  README  configure.ac  mysql-v0.cc  mysql.cc  postgresql.cc  v0.cc  v1.cc
