AUTOMAKE_OPTIONS=foreign 1.4

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
	$(CUNIT_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g


noinst_PROGRAMS = v0

v0_CPPFLAGS = $(OCTETOS_CORE_CFLAGS) $(CUNIT_CFLAGS) -I$(top_srcdir)/src 
v0_CXXFLAGS = $(OCTETOS_CORE_CFLAGS) $(CUNIT_CFLAGS) -I$(top_srcdir)/src 
v0_CFLAGS = $(OCTETOS_CORE_CFLAGS) $(CUNIT_CFLAGS) -I$(top_srcdir)/src
v0_LDFLAGS = 
v0_LDADD = $(OCTETOS_CORE_LIBS) $(CUNIT_LIBS) $(top_builddir)/src/liboctetos-db.la
if WITH_POSTGRESQL
v0_CPPFLAGS += $(LIBPQ_CFLAGS) -DOCTETOS_POSTGRESQL
v0_CXXFLAGS += $(LIBPQ_CFLAGS) -DOCTETOS_POSTGRESQL
v0_CFLAGS += $(LIBPQ_CFLAGS) -DOCTETOS_POSTGRESQL
v0_LDADD += $(top_builddir)/src/liboctetos-db-postgresql.la $(LIBPQ_LIBS) 
endif
if WITH_MYSQL
v0_CPPFLAGS += $(MYSQLCLIENT_CFLAGS) -DOCTETOS_MYSQL
v0_CXXFLAGS += $(MYSQLCLIENT_CFLAGS) -DOCTETOS_MYSQL
v0_CFLAGS += $(MYSQLCLIENT_CFLAGS) -DOCTETOS_MYSQL
v0_LDADD += $(top_builddir)/src/liboctetos-db-mysql.la $(MYSQLCLIENT_LIBS) 
endif
v0_SOURCES = v0.cc
